src/test/ui/error-codes/E0511.stderr
error[E0511]: invalid monomorphization of `simd_add` intrinsic: expected SIMD input type, found non-SIMD `i32`
  --> $DIR/E0511.rs:8:14
   |
LL |     unsafe { simd_add(0, 1); }
   |              ^^^^^^^^^^^^^^

error: aborting due to previous error

